@@ -1,0 +1,155 @@
+/*
+ * Network configuration for MPC8313ERDB in RTEMS Lab
+ * 
+ ************************************************************
+ * EDIT THIS FILE TO REFLECT YOUR NETWORK CONFIGURATION     *
+ * BEFORE RUNNING ANY RTEMS PROGRAMS WHICH USE THE NETWORK! * 
+ ************************************************************
+ *
+ *  $Id$
+ */
+
+#ifndef _RTEMS_NETWORKCONFIG_H_
+#define _RTEMS_NETWORKCONFIG_H_
+
+/*
+ *  The following will normally be set by the BSP if it supports
+ *  a single network device driver.  In the event, it supports
+ *  multiple network device drivers, then the user's default
+ *  network device driver will have to be selected by a BSP
+ *  specific mechanism.
+ */
+
+#ifndef RTEMS_BSP_NETWORK_DRIVER_NAME
+#warning "RTEMS_BSP_NETWORK_DRIVER_NAME is not defined"
+#define RTEMS_BSP_NETWORK_DRIVER_NAME "no_network1"
+#endif
+
+#ifndef RTEMS_BSP_NETWORK_DRIVER_ATTACH
+#warning "RTEMS_BSP_NETWORK_DRIVER_ATTACH is not defined"
+#define RTEMS_BSP_NETWORK_DRIVER_ATTACH 0
+#endif
+
+/* #define RTEMS_USE_BOOTP */
+
+#include <bsp.h>
+
+/*
+ * Define RTEMS_SET_ETHERNET_ADDRESS if you want to specify the
+ * Ethernet address here.  If RTEMS_SET_ETHERNET_ADDRESS is not
+ * defined the driver will choose an address.
+ */
+#define RTEMS_SET_ETHERNET_ADDRESS
+#if (defined (RTEMS_SET_ETHERNET_ADDRESS))
+  static char ethernet_address[6] = { 0x00, 0x04, 0x9F, 0x00, 0x5B, 0x21 };
+#endif
+
+#ifdef RTEMS_USE_LOOPBACK 
+/*
+ * Loopback interface
+ */
+extern void rtems_bsdnet_loopattach();
+static struct rtems_bsdnet_ifconfig loopback_config = {
+        "lo0",                          /* name */
+        rtems_bsdnet_loopattach,        /* attach function */
+        NULL,                           /* link to next interface */
+        "127.0.0.1",                    /* IP address */
+        "255.0.0.0",                    /* IP net mask */
+};
+#endif
+
+/*
+ * Default network interface
+ */
+static struct rtems_bsdnet_ifconfig netdriver_config = {
+        RTEMS_BSP_NETWORK_DRIVER_NAME,          /* name */
+        RTEMS_BSP_NETWORK_DRIVER_ATTACH,        /* attach function */
+
+#ifdef RTEMS_USE_LOOPBACK 
+        &loopback_config,               /* link to next interface */
+#else
+        NULL,                           /* No more interfaces */
+#endif
+
+#if (defined (RTEMS_USE_BOOTP))
+        NULL,                           /* BOOTP supplies IP address */
+        NULL,                           /* BOOTP supplies IP net mask */
+#else
+        "192.168.1.245",                /* IP address */
+        "255.255.255.0",                /* IP net mask */
+#endif /* !RTEMS_USE_BOOTP */
+
+#if (defined (RTEMS_SET_ETHERNET_ADDRESS))
+        ethernet_address,               /* Ethernet hardware address */
+#else
+        NULL,                           /* Driver supplies hardware address */
+#endif
+        0,                              /* ignore broadcast */
+        0,                              /* mtu */
+        0,                              /* rbuf_count */
+        0,                              /* xbuf_count */
+        0,                              /* port */
+        0,                              /* irq */
+        0,                              /* bpar */
+        NULL                            /* driver control pointer */
+};
+
+/*
+ * Network configuration
+ */
+struct rtems_bsdnet_config rtems_bsdnet_config = {
+        &netdriver_config,
+
+#if (defined (RTEMS_USE_BOOTP))
+        rtems_bsdnet_do_bootp,
+#else
+        NULL,
+#endif
+
+        0,                              /* Default network task priority */
+        256 * 1024,                     /* Default mbuf capacity */
+        256 * 1024,                     /* Default mbuf cluster capacity */
+
+#if (!defined (RTEMS_USE_BOOTP))
+        "rtems",                /* Host name */
+        "nodomain.com",         /* Domain name */
+        "192.168.1.14",         /* Gateway */
+        "192.168.1.1",          /* Log host */
+        {"192.168.1.1"  },      /* Name server(s) */
+        {"192.168.1.1"  },      /* NTP server(s) */
+#else
+        NULL,                   /* Host name */
+        NULL,                   /* Domain name */
+        NULL,                   /* Gateway */
+        NULL,                   /* Log host */
+        { NULL },               /* Name server(s) */
+        { NULL },               /* NTP server(s) */
+#endif /* !RTEMS_USE_BOOTP */
+        0,                      /* efficiency */
+        0,                      /* udp TX buffer */
+        0,                      /* udp RX buffer */
+        0,                      /* tcp TX buffer */
+        0,                      /* tcp RX buffer */
+};
+
+/*
+ * For TFTP test application
+ */
+#if (defined (RTEMS_USE_BOOTP))
+#define RTEMS_TFTP_TEST_HOST_NAME "BOOTP_HOST"
+#define RTEMS_TFTP_TEST_FILE_NAME "BOOTP_FILE"
+#else
+#define RTEMS_TFTP_TEST_HOST_NAME "XXX.YYY.ZZZ.XYZ"
+#define RTEMS_TFTP_TEST_FILE_NAME "tftptest"
+#endif
+
+/*
+ * For NFS test application
+ * 
+ * NFS server/path to mount and a directory to ls once mounted
+ */
+#define RTEMS_NFS_SERVER      "192.168.1.210"
+#define RTEMS_NFS_SERVER_PATH "/home"
+#define RTEMS_NFS_LS_PATH     "/mnt/nfstest"
+
+#endif /* _RTEMS_NETWORKCONFIG_H_ */
